test: 목표 레파지토리 테스트 수정